--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         env:
         - ruff
+        - format
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
