--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-envlist = ruff,format,py,behave
+envlist = ruff,format,py
 
 [testenv]
+description = Unit tests and test coverage
 deps =
     coverage[toml]
     pytest
@@ -9,16 +10,14 @@ commands =
     coverage run -m pytest {posargs}
     coverage report
 
-[testenv:behave]
-deps = behave
-commands = behave {posargs}
-
 [testenv:format]
+description = Ensure consistent code style
 skip_install = true
 deps = ruff
 commands = ruff format {posargs:--check --diff .}
 
 [testenv:ruff]
+description = Lightening-fast linting for Python
 skip_install = true
 deps = ruff
 commands = ruff check {posargs:--show-source .}
