Make GitLab collect test and coverage reports

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,3 +34,10 @@ pytest:
       - '3.10'
       - '3.11'
       - '3.12'
+  coverage: /^TOTAL.+?(\d+\%)$/
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
+      junit: junit.xml
