Add PyClean to Tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = lint,format,py
+envlist =
+    lint
+    format
+    py
+    clean
 
 [testenv]
 description = Unit tests and test coverage
@@ -22,3 +26,9 @@ description = Lightening-fast linting (Ruff)
 skip_install = true
 deps = ruff
 commands = ruff check {posargs:--show-source .}
+
+[testenv:clean]
+description = Clean up Python bytecode and other debris
+skip_install = true
+deps = pyclean
+commands = pyclean {posargs:. --debris}
