--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = ruff,format,py
+envlist = lint,format,py
 
 [testenv]
 description = Unit tests and test coverage
@@ -16,7 +16,7 @@ skip_install = true
 deps = ruff
 commands = ruff format {posargs:--check --diff .}
 
-[testenv:ruff]
+[testenv:lint]
 description = Lightening-fast linting for Python
 skip_install = true
 deps = ruff
