--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         env:
-        - ruff
+        - lint
         - format
     steps:
     - uses: actions/checkout@v3
