--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,13 @@ commands =
     coverage report
 
 [testenv:format]
-description = Ensure consistent code style
+description = Ensure consistent code style (Ruff)
 skip_install = true
 deps = ruff
 commands = ruff format {posargs:--check --diff .}
 
 [testenv:lint]
-description = Lightening-fast linting for Python
+description = Lightening-fast linting (Ruff)
 skip_install = true
 deps = ruff
 commands = ruff check {posargs:--show-source .}
